# punchcards

./: Cargo.toml  README.md  database_schema_exploration.py  example.db
PunchcardsAppIOS/PunchcardsAppIOS/: ContentView.swift  PunchcardsAppIOSApp.swift  ViewModel.swift
PunchcardsAppIOS/PunchcardsAppIOS.xcodeproj/: project.pbxproj
PunchcardsAppIOS/PunchcardsAppIOS.xcodeproj/xcuserdata/ephraimkunz.xcuserdatad/xcschemes/: xcschememanagement.plist
punchcards-client/: Cargo.toml
punchcards-client/src/: main.rs
punchcards-core/: Cargo.toml
punchcards-core/src/: lib.rs
punchcards-server/: Cargo.toml
punchcards-server/migrations/: 0_initial_schema.sql
punchcards-server/src/: lib.rs
