[package]
name = "punchcards-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.10.2"
ureq = { version = "2.5.0", features = ["json"] }
anyhow = "1.0.68"
punchcards-core = { path = "../punchcards-core" }
console = "0.15.3"
chrono = "0.4.23"
