[package]
name = "punchcards-server"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
anyhow = "1.0.68"
futures = "0.3.25"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0.152"
shuttle-service = { version = "0.8.0", features = ["web-rocket"] }
shuttle-shared-db = { version = "0.8.0", features = ["postgres"] }
sqlx = { version = "0.6.2", features = ["postgres", "chrono"] }
tracing = "0.1.37"
punchcards-core = { path = "../punchcards-core" }
async-trait = "0.1.60"
